made tiles 2 high to avoid gaps in mountains

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,3 @@
   height: 100vh;
   overflow: hidden;
 }
-
-canvas {
-  background: #041830;
-}
